# my-axum-app

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  cookies.txt  docker-compose.yml
docker/aeron/: Dockerfile
docker/aeron-exporter/: Dockerfile
docker/aeron-viewer/: Dockerfile  StreamViewer.java
docker/grafana/dashboards/: aeron-stats.json
docker/grafana/provisioning/dashboards/: dashboard.yml
docker/grafana/provisioning/datasources/: prometheus.yml
docker/pgadmin/: servers.json
docker/prometheus/: prometheus.yml
migrations/: 001_create_users.sql  20260630130333_create_users_table.sql  20260701050851_add_password_to_users.sql  20260701120000_add_created_at_to_users.sql  20260702120000_add_oauth_to_users.sql  20260706120000_create_wal_entries.sql
src/: aeron.rs  config.rs  db.rs  error.rs  main.rs  redis.rs  router.rs  wal.rs
src/guards/: ssrf.rs
src/middleware/: csrf.rs  jwt.rs  logger.rs  mod.rs  validate.rs
src/models/: mod.rs  user.rs  wal.rs
src/modules/oauth/: controller.rs  google.rs  mod.rs  routes.rs
src/modules/user/: controller.rs  helper.rs  mod.rs  routes.rs
