[package]
name = "my-axum-app"
version = "0.1.0"
edition = "2024"

[dependencies]
argon2 = "0.5"
axum = "0.8.9"
axum-extra = { version = "0.10", features = ["cookie"] }
chrono = { version = "0.4", features = ["serde"] }
dotenvy = "0.15.7"
jsonwebtoken = "9"
rand = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.9.0", features = ["runtime-tokio", "postgres", "macros", "chrono"] }
tokio = { version = "1.52.3", features = ["full"] }
redis = { version = "0.27", features = ["tokio-comp", "connection-manager"] }
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
url = "2"
uuid = { version = "1", features = ["v4"] }
validator = { version = "0.19", features = ["derive"] }
